Fixed footer on mobiles

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -389,6 +389,11 @@ ul.custom-dot
 	width: 100%
 	border-radius: 3px
 
+@media (max-width: 400px)
+
+	#social-links
+		margin-top: 9px !important
+
 #social-links
 	display: inline-block
 	float: right
